[gd_scene load_steps=27 format=3 uid="uid://cjjvxgn2axgb2"]

[ext_resource type="Script" uid="uid://dwg15gpe1spw3" path="res://src/player/player_controller.gd" id="1_8afob"]
[ext_resource type="Script" uid="uid://b3pbyjq4a3yl0" path="res://src/player/weapon/weapon_component.gd" id="2_cwolq"]
[ext_resource type="SpriteFrames" uid="uid://da4r14g1m42s6" path="res://src/player/player_animations_ss.tres" id="2_x42xx"]
[ext_resource type="Shader" uid="uid://dxqtuj6x7axii" path="res://src/player/vfx/s_clouds.tres" id="2_ylhto"]
[ext_resource type="PackedScene" uid="uid://bl6n2yj8bx6r3" path="res://src/player/projectile.tscn" id="3_2smqc"]
[ext_resource type="Script" uid="uid://bpnnmbbgsy1ra" path="res://addons/godot_state_charts/state_chart.gd" id="3_jiejy"]
[ext_resource type="AnimationLibrary" uid="uid://dwser2v8a1huw" path="res://src/player/animations/animation_library.tres" id="3_x42xx"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://xw0yqepavsvl" path="res://src/player/animations/state_machine_anim.tres" id="4_l271a"]
[ext_resource type="Script" uid="uid://d2frwrtcar1ga" path="res://addons/godot_state_charts/compound_state.gd" id="4_o822w"]
[ext_resource type="Script" uid="uid://dievtw4ea6dt4" path="res://addons/godot_state_charts/atomic_state.gd" id="5_x42xx"]
[ext_resource type="Script" uid="uid://d6qlb3u64wvs" path="res://addons/godot_state_charts/transition.gd" id="6_l271a"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="7_o822w"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ylhto"]
emission_shape = 1
emission_sphere_radius = 0.5
gravity = Vector3(0, 0, 0)
sub_emitter_mode = 4
sub_emitter_amount_at_start = 1

[sub_resource type="SphereMesh" id="SphereMesh_cwolq"]
radius = 0.01
height = 0.02

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ylhto"]
frequency = 0.0015

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cwolq"]
noise = SubResource("FastNoiseLite_ylhto")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cwolq"]
render_priority = 0
shader = ExtResource("2_ylhto")
shader_parameter/Texture2DParameter_ = SubResource("NoiseTexture2D_cwolq")

[sub_resource type="Gradient" id="Gradient_ylhto"]
offsets = PackedFloat32Array(0.495098, 0.980392)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cwolq"]
gradient = SubResource("Gradient_ylhto")

[sub_resource type="Curve" id="Curve_ylhto"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.505618), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cwolq"]
curve = SubResource("Curve_ylhto")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mf2ua"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.5
gravity = Vector3(0, 0, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 0.499998
scale_min = 0.5
scale_curve = SubResource("CurveTexture_cwolq")
color_ramp = SubResource("GradientTexture1D_cwolq")
turbulence_noise_strength = 20.0
turbulence_noise_scale = 0.517
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_244u8"]
radius = 0.1
height = 0.2

[sub_resource type="Gradient" id="Gradient_8afob"]
offsets = PackedFloat32Array(0.445714, 0.617143, 1)
colors = PackedColorArray(0, 0, 0, 0.721569, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dovo2"]
gradient = SubResource("Gradient_8afob")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0xm2m"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_8afob")
_speed = 200.0

[node name="WeaponComponent" type="Node" parent="."]
script = ExtResource("2_cwolq")
_projectile_scene = ExtResource("3_2smqc")

[node name="Visuals" type="Node3D" parent="."]

[node name="CloudSpanwer" type="GPUParticles3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.999525, 0)
emitting = false
sub_emitter = NodePath("../LittleClouds")
lifetime = 0.1
one_shot = true
process_material = SubResource("ParticleProcessMaterial_ylhto")
draw_pass_1 = SubResource("SphereMesh_cwolq")

[node name="LittleClouds" type="GPUParticles3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.989536, 0)
material_override = SubResource("ShaderMaterial_cwolq")
cast_shadow = 0
emitting = false
lifetime = 0.75
fixed_fps = 60
visibility_aabb = AABB(-0.565477, -0.445779, -0.573162, 1.08383, 0.973986, 1.09189)
process_material = SubResource("ParticleProcessMaterial_mf2ua")
draw_pass_1 = SubResource("SphereMesh_244u8")

[node name="Shadow" type="Decal" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.89932, 0)
size = Vector3(1.25, 10, 1.25)
texture_albedo = SubResource("GradientTexture2D_dovo2")
upper_fade = 35.0555
lower_fade = 1e-05
distance_fade_enabled = true

[node name="PlayerAnimations" type="AnimatedSprite3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.198141, 0)
pixel_size = 0.0011
billboard = 1
sprite_frames = ExtResource("2_x42xx")
animation = &"idle_down"

[node name="CollisionPlaceholder" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0xm2m")

[node name="PlanetViewer" type="VoxelViewer" parent="."]

[node name="SFX" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13252, 1.1858)

[node name="CheckIfGround" type="RayCast3D" parent="."]
visible = false
target_position = Vector3(0, -1.5, 0)
collision_mask = 6
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("3_x42xx")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
callback_mode_discrete = 1
tree_root = ExtResource("4_l271a")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = -0.0756881

[node name="PlayerStateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_jiejy")
metadata/_custom_type_script = "uid://bpnnmbbgsy1ra"

[node name="Root" type="Node" parent="PlayerStateChart"]
script = ExtResource("4_o822w")
initial_state = NodePath("Airbone")

[node name="Grounded" type="Node" parent="PlayerStateChart/Root"]
script = ExtResource("4_o822w")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://d2frwrtcar1ga"

[node name="OnJump" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("6_l271a")
to = NodePath("../../Airbone/Jumping")
event = &"jump"
delay_in_seconds = "0.0"

[node name="OnAirbone" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("6_l271a")
to = NodePath("../../Airbone")
event = &"airbone"
delay_in_seconds = "0.0
"

[node name="OnShoot" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("6_l271a")
to = NodePath("../Shooting")
event = &"shoot"
delay_in_seconds = "0.0F

"
metadata/_custom_type_script = "uid://d6qlb3u64wvs"

[node name="OnWalk" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("6_l271a")
to = NodePath("../Walking")
event = &"walk"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://d6qlb3u64wvs"

[node name="OnIdle" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("6_l271a")
to = NodePath("../Idle")
event = &"idle"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://d6qlb3u64wvs"

[node name="Idle" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("5_x42xx")
metadata/_custom_type_script = "uid://dievtw4ea6dt4"

[node name="Walking" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("5_x42xx")
metadata/_custom_type_script = "uid://dievtw4ea6dt4"

[node name="Shooting" type="Node" parent="PlayerStateChart/Root/Grounded"]
script = ExtResource("5_x42xx")
metadata/_custom_type_script = "uid://dievtw4ea6dt4"

[node name="OnFinish" type="Node" parent="PlayerStateChart/Root/Grounded/Shooting"]
script = ExtResource("6_l271a")
to = NodePath("../..")
delay_in_seconds = "2.5
"
metadata/_custom_type_script = "uid://d6qlb3u64wvs"

[node name="Airbone" type="Node" parent="PlayerStateChart/Root"]
script = ExtResource("4_o822w")
initial_state = NodePath("CoyoteTime")

[node name="OnGrounded" type="Node" parent="PlayerStateChart/Root/Airbone"]
script = ExtResource("6_l271a")
to = NodePath("../../Grounded")
event = &"grounded"
delay_in_seconds = "0.0"

[node name="CoyoteTime" type="Node" parent="PlayerStateChart/Root/Airbone"]
script = ExtResource("5_x42xx")

[node name="OnJump" type="Node" parent="PlayerStateChart/Root/Airbone/CoyoteTime"]
script = ExtResource("6_l271a")
to = NodePath("../../Jumping")
event = &"jump"
delay_in_seconds = "0.0"

[node name="OnExpiration" type="Node" parent="PlayerStateChart/Root/Airbone/CoyoteTime"]
script = ExtResource("6_l271a")
to = NodePath("../../CannotJump")
delay_in_seconds = "0.4"

[node name="Jumping" type="Node" parent="PlayerStateChart/Root/Airbone"]
script = ExtResource("5_x42xx")

[node name="JumpFinished" type="Node" parent="PlayerStateChart/Root/Airbone/Jumping"]
script = ExtResource("6_l271a")
to = NodePath("../../CannotJump")
event = &"jump_finished"
delay_in_seconds = "0.0"

[node name="CannotJump" type="Node" parent="PlayerStateChart/Root/Airbone"]
script = ExtResource("5_x42xx")

[node name="StateChartDebugger" parent="." instance=ExtResource("7_o822w")]
offset_left = 969.0
offset_top = 29.0
offset_right = -27.0
offset_bottom = -408.0
initial_node_to_watch = NodePath("../PlayerStateChart")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="state_physics_processing" from="PlayerStateChart/Root/Grounded" to="." method="_on_check_jump_grounded_state_physics_processing"]
[connection signal="state_physics_processing" from="PlayerStateChart/Root/Grounded" to="." method="_on_grounded_state_physics_processing"]
[connection signal="state_physics_processing" from="PlayerStateChart/Root/Grounded" to="WeaponComponent" method="_on_grounded_state_physics_processing"]
[connection signal="state_entered" from="PlayerStateChart/Root/Grounded/Shooting" to="WeaponComponent" method="_on_shooting_state_entered"]
[connection signal="state_physics_processing" from="PlayerStateChart/Root/Airbone" to="." method="_on_airbone_state_physics_processing"]
[connection signal="state_physics_processing" from="PlayerStateChart/Root/Airbone/CoyoteTime" to="." method="_on_coyote_time_state_physics_processing"]
[connection signal="state_entered" from="PlayerStateChart/Root/Airbone/Jumping" to="." method="_on_jumping_state_entered"]
[connection signal="state_physics_processing" from="PlayerStateChart/Root/Airbone/CannotJump" to="." method="_on_cannot_jump_state_physics_processing"]
